--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -1,14 +1,24 @@
+body {
+    margin: 0;
+}
 .video_wrapper {
-    text-align: center;
+    position: relative;
+    width: 100vw;
+    height: 80vh;
+    overflow: hidden;
 }
 
-#error_message {
-    height: 20%;
-    text-align: center;
+.video_wrapper > video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    min-width: 100%;
+    min-height: 100%;
 }
 
 #volume {
-    height: 20%;
+    height: 20vh;
     text-align: center;
 }
 
