--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -1,15 +1,14 @@
 body {
     margin: 0;
 }
+
 .video_wrapper {
-    position: relative;
     width: 100vw;
-    height: 80vh;
+    height: 85vh;
     overflow: hidden;
 }
 
 .video_wrapper > video {
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -17,8 +16,11 @@ body {
     min-height: 100%;
 }
 
+.volume_wrapper {
+    height: 15vh;
+}
+
 #volume {
-    height: 20vh;
     text-align: center;
 }
 
