--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -3,12 +3,14 @@ body {
 }
 
 .video_wrapper {
+    position: relative;
     width: 100vw;
     height: 85vh;
     overflow: hidden;
 }
 
 .video_wrapper > video {
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
