--- a/measurevolume/templates/measurevolume/index.html
+++ b/measurevolume/templates/measurevolume/index.html
@@ -20,8 +20,9 @@
     </div>
     <div class="canvas_wrapper">
         <canvas id="canvas"></canvas>
+    <div id="volume_wrapper">
+        <button id="capture_button" onclick="takePicture()">capture</button>
     </div>
-    <div id="volume_wrapper"></div>
+    
 </body>
-
 </html>
