--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -1,29 +1,31 @@
 body {
     margin: 0;
+    background-color: black;
 }
 
 .video_wrapper {
     position: relative;
     width: 100vw;
     height: 85vh;
-    overflow: hidden;
 }
 
 .video_wrapper > video {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
+    
 }
 
-.volume_wrapper {
+#volume_wrapper {
     height: 15vh;
+    display: flex;
 }
 
 #volume {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
 }
 
 #canvas {
