--- a/measurevolume/templates/measurevolume/index.html
+++ b/measurevolume/templates/measurevolume/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="canvas_wrapper">
         <canvas id="canvas"></canvas>
+    </div>
     <div id="volume_wrapper">
         <button id="capture_button" onclick="takePicture()">capture</button>
     </div>
