ボタン反応追加

--- a/measurevolume/templates/measurevolume/index.html
+++ b/measurevolume/templates/measurevolume/index.html
@@ -21,8 +21,8 @@
     <div class="canvas_wrapper">
         <canvas id="canvas"></canvas>
     </div>
-    <div id="volume_wrapper">
-        <button id="capture_button" onclick="takePicture()">capture</button>
+    <div id="volume_wrapper" class="volume_wrapper">
+        <button id="capture_button" class="capture_button" onclick="takePicture()"></button>
     </div>
     
 </body>
