--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -7,15 +7,16 @@ body {
     position: relative;
     width: 100vw;
     height: 85vh;
+    overflow: hidden;
 }
 
 .video_wrapper > video {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
-#volume_wrapper {
+.volume_wrapper {
     height: 15vh;
     display: flex;
     flex-direction: row-reverse;
@@ -27,8 +28,26 @@ body {
     color: white;
 }
 
-#volume_wrapper > button {
-    width: 15vw;   
+.volume_wrapper > button {
+    width: 15vh;   
+}
+
+.capture_button {
+	cursor:pointer;
+	border-top:2px solid rgba(255,255,255,0.2);
+	border-bottom:2px solid rgba(0,0,0,0.2);
+	border-radius:4px;
+}
+
+.capture_button:hover {
+	opacity:0.8;
+}
+
+.capture_button:active {
+	-webkit-transform: translate(0,2px);
+	-moz-transform: translate(0,2px);
+	transform: translate(0,2px);
+	border-bottom:none;
 }
 
 #canvas {
