--- a/measurevolume/static/measurevolume/css/style.css
+++ b/measurevolume/static/measurevolume/css/style.css
@@ -4,16 +4,13 @@ body {
 }
 
 .video_wrapper {
-    position: relative;
     width: 100vw;
     height: 85vh;
-    overflow: hidden;
+    text-align: center;
 }
 
 .video_wrapper > video {
-    position: absolute;
-    min-width: 100%;
-    min-height: 100%;
+    height: 100%;
 }
 
 .volume_wrapper {
@@ -29,7 +26,7 @@ body {
 }
 
 .volume_wrapper > button {
-    width: 15vh;   
+    width: 15vh;
 }
 
 .capture_button {
